Translate index.html content from French to English

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CGU & Politique de Confidentialité - MovieBot</title>
+  <title>Terms of Service & Privacy Policy - MovieBot</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -30,54 +30,54 @@
   </style>
 </head>
 <body>
-  <h1>Conditions Générales d'Utilisation (CGU) & Politique de Confidentialité</h1>
+  <h1>Terms of Service & Privacy Policy</h1>
 
-  <section id="cgu">
-    <h2>Conditions Générales d'Utilisation (CGU)</h2>
-    <p>Bienvenue sur MovieBot, un bot Discord qui permet de lier un compte Patreon pour activer des bonus dans le jeu.</p>
-    <p>En utilisant MovieBot, vous acceptez les présentes conditions d'utilisation :</p>
+  <section id="tos">
+    <h2>Terms of Service</h2>
+    <p>Welcome to MovieBot, a Discord bot that allows linking a Patreon account to activate in-game bonuses.</p>
+    <p>By using MovieBot, you agree to the following terms of service:</p>
     <ul>
-      <li>Vous êtes responsable de la sécurité de votre compte Discord.</li>
-      <li>Le bot ne collecte que les données nécessaires pour vérifier votre abonnement Patreon.</li>
-      <li>Vous acceptez que MovieBot puisse consulter votre statut d’abonnement Patreon pour vous accorder des bonus.</li>
-      <li>MovieBot ne partagera jamais vos données avec des tiers sans votre consentement.</li>
-      <li>Le service peut être interrompu ou modifié sans préavis.</li>
+      <li>You are responsible for the security of your Discord account.</li>
+      <li>The bot only collects data necessary to verify your Patreon subscription.</li>
+      <li>You agree that MovieBot may check your Patreon subscription status to grant bonuses.</li>
+      <li>MovieBot will never share your data with third parties without your consent.</li>
+      <li>The service may be interrupted or modified without prior notice.</li>
     </ul>
   </section>
 
   <section id="privacy">
-    <h2>Politique de Confidentialité</h2>
-    <p>MovieBot respecte votre vie privée et s’engage à protéger vos données personnelles.</p>
+    <h2>Privacy Policy</h2>
+    <p>MovieBot respects your privacy and is committed to protecting your personal data.</p>
 
-    <h3>Données collectées</h3>
-    <p>MovieBot collecte uniquement les données suivantes :</p>
+    <h3>Data Collected</h3>
+    <p>MovieBot collects only the following data:</p>
     <ul>
-      <li>Identifiant Discord</li>
-      <li>Identifiant Patreon</li>
-      <li>Statut et niveau d’abonnement Patreon</li>
-      <li>Éventuellement votre adresse e-mail Patreon si fournie</li>
+      <li>Discord ID</li>
+      <li>Patreon ID</li>
+      <li>Patreon subscription status and tier</li>
+      <li>Optionally, your Patreon email address if provided</li>
     </ul>
 
-    <h3>Utilisation des données</h3>
-    <p>Ces données sont utilisées uniquement pour :</p>
+    <h3>Use of Data</h3>
+    <p>This data is used solely to:</p>
     <ul>
-      <li>Vérifier et synchroniser votre abonnement Patreon avec votre compte Discord.</li>
-      <li>Activer les bonus liés à votre abonnement dans le bot.</li>
+      <li>Verify and sync your Patreon subscription with your Discord account.</li>
+      <li>Activate bonuses related to your subscription within the bot.</li>
     </ul>
 
-    <h3>Sécurité des données</h3>
-    <p>Vos données sont stockées dans une base de données sécurisée et ne sont accessibles qu’aux membres autorisés de l’équipe de développement.</p>
+    <h3>Data Security</h3>
+    <p>Your data is stored securely in a database and accessible only to authorized members of the development team.</p>
 
-    <h3>Durée de conservation</h3>
-    <p>Vos données sont conservées tant que votre compte existe et que vous utilisez MovieBot. En cas de suppression ou de désactivation, les données seront effacées.</p>
+    <h3>Data Retention</h3>
+    <p>Your data is retained as long as your account exists and you use MovieBot. Upon deletion or deactivation, the data will be erased.</p>
 
-    <h3>Vos droits</h3>
-    <p>Vous pouvez à tout moment demander l’accès, la modification ou la suppression de vos données personnelles en contactant <a href="mailto:ton.email@example.com">ton.email@example.com</a>.</p>
+    <h3>Your Rights</h3>
+    <p>You can request access, modification, or deletion of your personal data at any time by contacting <a href="mailto:moviebot.contact@gmail.com">moviebot.contact@gmail.com</a>.</p>
 
     <h3>Contact</h3>
-    <p>Pour toute question relative à la confidentialité, vous pouvez nous contacter à l’adresse email ci-dessus.</p>
+    <p>For any questions regarding privacy, you can contact us at the email address above.</p>
 
-    <p><em>Date de dernière mise à jour : 2025-12-15</em></p>
+    <p><em>Last updated: December 15, 2025</em></p>
   </section>
 </body>
 </html>
