--- a/index.html
+++ b/index.html
@@ -1,83 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Terms of Service & Privacy Policy - MovieBot</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 700px;
-      margin: 40px auto;
-      padding: 0 15px;
-      line-height: 1.6;
-      color: #222;
-      background: #f9f9f9;
-    }
-    h1, h2 {
-      color: #ff69b4;
-    }
-    a {
-      color: #ff69b4;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    section {
-      margin-bottom: 2em;
-    }
-  </style>
+  <meta charset="utf-8" />
+  <title>Test web component lecteur audio</title>
+  <link rel="icon" href="../assets/fav.png" />
+
+  <script src="./PART3_WebComponentClient/lecteurAudioWebComponent/components/libs/butterchurn.js"></script>
+  <script src="./PART3_WebComponentClient/lecteurAudioWebComponent/components/libs/butterchurnPresets.min.js"></script>
+
+  <script type="module" src="./PART3_WebComponentClient/lecteurAudioWebComponent/components/audio_equalizer.js"></script>
+  <script type="module" src="./PART3_WebComponentClient/lecteurAudioWebComponent/components/audio_visualizer.js"></script>
+  <script type="module" src="./PART3_WebComponentClient/lecteurAudioWebComponent/components/audioplayer.js"></script>
+  <script type="module" src="./PART3_WebComponentClient/lecteurAudioWebComponent/components/eq_band.js"></script>
+  <script type="module" src="./PART3_WebComponentClient/lecteurAudioWebComponent/components/audio_butterchurn.js"></script>
+  <script type="module" src="./PART3_WebComponentClient/lecteurAudioWebComponent/components/libs/webaudiocontrols.js"></script>
+  <script type="module" src="./PART3_WebComponentClient/lecteurAudioWebComponent/components/audio_playlist.js"></script>
+  <script type="module" src="./PART3_WebComponentClient/lecteurAudioWebComponent/components/microphone_recorder.js"></script>
+  <script type="module" src="./PART3_WebComponentClient/lecteurAudioWebComponent/components/audio_sampler.js"></script>
 </head>
+
 <body>
-  <h1>Terms of Service & Privacy Policy</h1>
+  <h1>Mon lecteur audio</h1>
 
-  <section id="tos">
-    <h2>Terms of Service</h2>
-    <p>Welcome to MovieBot, a Discord bot that allows linking a Patreon account to activate in-game bonuses.</p>
-    <p>By using MovieBot, you agree to the following terms of service:</p>
-    <ul>
-      <li>You are responsible for the security of your Discord account.</li>
-      <li>The bot only collects data necessary to verify your Patreon subscription.</li>
-      <li>You agree that MovieBot may check your Patreon subscription status to grant bonuses.</li>
-      <li>MovieBot will never share your data with third parties without your consent.</li>
-      <li>The service may be interrupted or modified without prior notice.</li>
-    </ul>
-  </section>
-
-  <section id="privacy">
-    <h2>Privacy Policy</h2>
-    <p>MovieBot respects your privacy and is committed to protecting your personal data.</p>
-
-    <h3>Data Collected</h3>
-    <p>MovieBot collects only the following data:</p>
-    <ul>
-      <li>Discord ID</li>
-      <li>Patreon ID</li>
-      <li>Patreon subscription status and tier</li>
-      <li>Optionally, your Patreon email address if provided</li>
-    </ul>
-
-    <h3>Use of Data</h3>
-    <p>This data is used solely to:</p>
-    <ul>
-      <li>Verify and sync your Patreon subscription with your Discord account.</li>
-      <li>Activate bonuses related to your subscription within the bot.</li>
-    </ul>
-
-    <h3>Data Security</h3>
-    <p>Your data is stored securely in a database and accessible only to authorized members of the development team.</p>
-
-    <h3>Data Retention</h3>
-    <p>Your data is retained as long as your account exists and you use MovieBot. Upon deletion or deactivation, the data will be erased.</p>
-
-    <h3>Your Rights</h3>
-    <p>You can request access, modification, or deletion of your personal data at any time by contacting <a href="mailto:moviebot.contact@gmail.com">moviebot.contact@gmail.com</a>.</p>
-
-    <h3>Contact</h3>
-    <p>For any questions regarding privacy, you can contact us at the email address above.</p>
-
-    <p><em>Last updated: December 15, 2025</em></p>
-  </section>
+  <my-audio-player src="./PART3_WebComponentClient/assets/evil-mind-137236.mp3">
+    <audio-equalizer></audio-equalizer>
+    <audio-visualizer></audio-visualizer>
+    <audio-butterchurn></audio-butterchurn>
+    <audio-playlist></audio-playlist>
+    <sampler-grid></sampler-grid>
+  </my-audio-player>
+  <h2>Enregistreur Micro</h2>
+  <microphone-recorder></microphone-recorder>
 </body>
 </html>
